src/objects/Global_Org_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores org wide defaults</description>
    <fields>
        <fullName>Agent_Default_Email__c</fullName>
        <label>Agent Default Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amber_Threshold__c</fullName>
        <defaultValue>39</defaultValue>
        <description>Red &gt; Amber threshold point. When the percent is equal to or higher to this value it will display amber.</description>
        <inlineHelpText>Red &gt; Amber threshold point. When the percent is equal to or higher to this value it will display amber.</inlineHelpText>
        <label>Amber Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Site_URL__c</fullName>
        <label>Base Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_Retreival_Delay_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CCM Retreival Delay Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conga_Running_User_ID__c</fullName>
        <description>This field holds ID of the Conga Running User. This field is required to prevent the Conga running user from changing the status of Fulfillment Orders.</description>
        <inlineHelpText>This field holds ID of the Conga Running User. This field is required to prevent the Conga running user from changing the status of Fulfillment Orders.</inlineHelpText>
        <label>Conga Running User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversable_Chatbot_Base_URL__c</fullName>
        <description>Currently https://webchat.dev.conversable.com for the Dev box</description>
        <label>Conversable Chatbot Base URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Tracking_Code__c</fullName>
        <description>Google Analytics tracking code specific to environment. *Note* must be enclosed in &apos; for example &apos;UA123&apos;.</description>
        <inlineHelpText>Google Analytics tracking code specific to environment. *Note* must be enclosed in &apos; for example &apos;UA123&apos;.</inlineHelpText>
        <label>GA Tracking Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Threshold__c</fullName>
        <defaultValue>70</defaultValue>
        <description>Amber &gt; Green threshold point. When the percent is equal to or higher to this value it will display green.</description>
        <inlineHelpText>Amber &gt; Green threshold point. When the percent is equal to or higher to this value it will display green.</inlineHelpText>
        <label>Green Threshold</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Results_is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true product search tab defaults to the product results tab, if false defaults to the path tab</description>
        <inlineHelpText>If true product search tab defaults to the product results tab, if false defaults to the path tab</inlineHelpText>
        <label>Product Results is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sprinklr_Community_Source__c</fullName>
        <label>Sprinklr Community Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Administrator_Profile_Id__c</fullName>
        <description>Id for the standard system admin profile</description>
        <label>System Administrator Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Case_Days__c</fullName>
        <description>Number of days to &quot;tag&quot; Cases back to when a Contact is saved to a Case</description>
        <inlineHelpText>Number of days to &quot;tag&quot; Cases back to when a Contact is saved to a Case</inlineHelpText>
        <label>Tag Case Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gsVerificationCode__c</fullName>
        <description>Field to hold google site verification code to allow more users to use google webmaster tools for the site</description>
        <label>Google Site Verification Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Global Org Settings</label>
</CustomObject>